# Agentic-System

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt  verify_hierarchical.py
migrations/: env.py
migrations/versions/: 0001_create_session_records.py
prompts/: CHANGELOG.md
prompts/versions/: v1.json  v2.json  v3.json
src/agentic_system/: __init__.py  api.py  main.py
src/agentic_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/agentic_system/agents/: registry.py  tool_models.py  tool_registry.py
src/agentic_system/agents/analysis/builders/: web.py
src/agentic_system/agents/definitions/: __init__.py  analysis_assistant.py  general_assistant.py  lifestyle_guru.py  skill_enhancer.py  superagent.py
src/agentic_system/commands/: make_agent.py  make_tool.py
src/agentic_system/config/: database.py  settings.py
src/agentic_system/database/: __init__.py  engine.py  init_db.py  session.py
src/agentic_system/models/: __init__.py  session_record.py
src/agentic_system/orchestrator/: graph.py  llm_factory.py  manager.py  state.py  ui_models.py
src/agentic_system/prompting/: __init__.py  manager.py
src/agentic_system/session_store/: __init__.py  db_store.py  file_store.py  interface.py  record_ops.py
src/agentic_system/tools/: core_tools.py  groups.py  http_api.py  registry.py  tool_models.py
src/agentic_system/tools/builders/: __init__.py
src/agentic_system/tools/definitions/: __init__.py  bank_account_api.py  calculator.py  web_scrape.py  web_search.py
src/agentic_system/tools/tool_factory/: __init__.py
src/agentic_system/tools/web/: scraper.py  search.py
src/agentic_system/web/: index.html
(+24 files in other folders)
