[project]
name = "agentic-system"
version = "0.1.0"
description = "Standardized multi-agent orchestration with LangChain, LangGraph, and LangSmith"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-google-genai>=2.0.0",
  "langgraph>=0.2.0",
  "langsmith>=0.1.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "requests>=2.32.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "grandalf>=0.8",
  "fastapi",
  "uvicorn",
  "beautifulsoup4"
]

[project.scripts]
agentic = "agentic_system.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
agentic_system = ["web/*.html"]

[tool.setuptools.packages.find]
where = ["src"]
